fixed width on input on firefox/chrome

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ ul {
 }
 
 #cocktail_input {
+  max-width: 100%;
   margin-inline: auto;
   text-align: center;
   display: block;
